:lipstick: style: 계산 페이지

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -164,6 +164,64 @@
           <button class="order-sect__btn">획득</button>
         </div>
       </section>
+      <section class="page page--bill">
+        <div class="bill-result">
+          <div class="check__money--amount">
+            소지금
+            <strong class="check__cash">25,000원</strong>
+          </div>
+        </div>
+        <div class="order-result">
+          <h3 class="order-result__tit">획득한 음료</h3>
+          <ul class="order-list order-list--result">
+            <li class="order-list__item">
+              <div class="order-item order-item--result">
+                <img
+                  src="./resource/img/Original_Cola.png"
+                  alt=""
+                  class="order-item__img"
+                />
+                <span class="order-item__tit">Original Cola</span>
+              </div>
+              <strong class="order-item__number">1</strong>
+            </li>
+            <li class="order-list__item">
+              <div class="order-item">
+                <img
+                  src="./resource/img/Green_Cola.png"
+                  alt=""
+                  class="order-item__img"
+                />
+                <span class="order-item__tit">Green Cola</span>
+              </div>
+              <strong class="order-item__number">2</strong>
+            </li>
+            <li class="order-list__item">
+              <div class="order-item">
+                <img
+                  src="./resource/img/Orange_Cola.png"
+                  alt=""
+                  class="order-item__img"
+                />
+                <span class="order-item__tit">Orange Cola</span>
+              </div>
+              <strong class="order-item__number">1</strong>
+            </li>
+            <li class="order-list__item">
+              <div class="order-item">
+                <img
+                  src="./resource/img/Violet_Cola.png"
+                  alt=""
+                  class="order-item__img"
+                />
+                <span class="order-item__tit">Violet Cola</span>
+              </div>
+              <strong class="order-item__number">5</strong>
+            </li>
+          </ul>
+          <p class="order-result__sum">총금액 : 9,000 원</p>
+        </div>
+      </section>
     </div>
   </body>
 </html>
