:sparkles: feat: 반환 기능

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -132,7 +132,7 @@
         <div class="check">
           <div class="check__money check__money--amount">
             입금액 :
-            <span id="balance"></span>
+            <span id="balance">0원</span>
           </div>
           <button class="check__btn" id="btnRefund">거스름돈 반환</button>
         </div>
