:sparkles: 콜라 아이템 선택 기능, 품절 기능 추가

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -19,13 +19,13 @@
     <div class="app">
       <h1 class="app-tit sr-only">vending-machine</h1>
       <section class="page page--order">
-        <ul class="cola-list">
+        <ul class="cola-list" id="colaList">
           <li class="cola-list__item">
             <button
               class="cola__btn"
-              data-item="Original Cola"
-              data-count=""
-              data-price=""
+              data-item="Original_Cola"
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
@@ -41,9 +41,9 @@
           <li class="cola-list__item">
             <button
               class="cola__btn"
-              data-item="Original Cola"
-              data-count=""
-              data-price=""
+              data-item="Orange_Cola"
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
@@ -60,8 +60,8 @@
             <button
               class="cola__btn"
               data-item="Violet_Cola"
-              data-count=""
-              data-price=""
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
@@ -77,9 +77,9 @@
           <li class="cola-list__item">
             <button
               class="cola__btn"
-              data-item="Original Cola"
-              data-count=""
-              data-price=""
+              data-item="Yellow_Cola"
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
@@ -95,9 +95,9 @@
           <li class="cola-list__item">
             <button
               class="cola__btn"
-              data-item="Original Cola"
-              data-count=""
-              data-price=""
+              data-item="Cool_Cola"
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
@@ -113,9 +113,9 @@
           <li class="cola-list__item">
             <button
               class="cola__btn"
-              data-item="Original Cola"
-              data-count=""
-              data-price=""
+              data-item="Green_Cola"
+              data-count="5"
+              data-price="1000"
               data-image=""
               disabled
             >
