--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -153,7 +153,7 @@
         </div>
         <div class="order-sect">
           <ul class="order-list order-list--staged" id="staged"></ul>
-          <button class="order-sect__btn">획득</button>
+          <button id="btnOrder" class="order-sect__btn">획득</button>
         </div>
       </section>
       <section class="page page--bill">
@@ -165,7 +165,7 @@
         </div>
         <div class="order-result">
           <h3 class="order-result__tit">획득한 음료</h3>
-          <ul class="order-list order-list--result">
+          <ul id="result" class="order-list order-list--result">
             <li class="order-list__item">
               <div class="order-item order-item--result">
                 <img
@@ -176,39 +176,6 @@
                 <span class="order-item__tit">Original Cola</span>
               </div>
               <strong class="order-item__number">1</strong>
-            </li>
-            <li class="order-list__item">
-              <div class="order-item">
-                <img
-                  src="./resource/img/Green_Cola.png"
-                  alt=""
-                  class="order-item__img"
-                />
-                <span class="order-item__tit">Green Cola</span>
-              </div>
-              <strong class="order-item__number">2</strong>
-            </li>
-            <li class="order-list__item">
-              <div class="order-item">
-                <img
-                  src="./resource/img/Orange_Cola.png"
-                  alt=""
-                  class="order-item__img"
-                />
-                <span class="order-item__tit">Orange Cola</span>
-              </div>
-              <strong class="order-item__number">1</strong>
-            </li>
-            <li class="order-list__item">
-              <div class="order-item">
-                <img
-                  src="./resource/img/Violet_Cola.png"
-                  alt=""
-                  class="order-item__img"
-                />
-                <span class="order-item__tit">Violet Cola</span>
-              </div>
-              <strong class="order-item__number">5</strong>
             </li>
           </ul>
           <p class="order-result__sum" id="totalAmount">총금액 : 9,000 원</p>
