:wrench: 장바구니 데이터 객체형 변경

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -27,7 +27,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Original_Cola.png"
-              data-id="OriginalCola"
+              data-key="OriginalCola"
               disabled
             >
               <img
@@ -46,7 +46,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Orange_Cola.png"
-              data-id="OrangeCola"
+              data-key="OrangeCola"
               disabled
             >
               <img
@@ -65,7 +65,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Violet_Cola.png"
-              data-id="VioletCola"
+              data-key="VioletCola"
               disabled
             >
               <img
@@ -84,7 +84,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Yellow_Cola.png"
-              data-id="YellowCola"
+              data-key="YellowCola"
               disabled
             >
               <img
@@ -103,7 +103,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Cool_Cola.png"
-              data-id="CoolCola"
+              data-key="CoolCola"
               disabled
             >
               <img
@@ -122,7 +122,7 @@
               data-count="5"
               data-price="1000"
               data-src="resource/img/Green_Cola.png"
-              data-id="GreenCola"
+              data-key="GreenCola"
               disabled
             >
               <img
@@ -152,7 +152,7 @@
           <button type="submit" class="check__btn" id="btnDeposit">입금</button>
         </div>
         <div class="order-sect">
-          <ul class="order-list order-list--staged" id="staged"></ul>
+          <ul class="order-list order-list--staged" id="stagedList"></ul>
           <button id="btnOrder" class="order-sect__btn">획득</button>
         </div>
       </section>
@@ -165,7 +165,7 @@
         </div>
         <div class="order-result">
           <h3 class="order-result__tit">획득한 음료</h3>
-          <ul id="result" class="order-list order-list--result">
+          <ul id="resultList" class="order-list order-list--result">
             <li class="order-list__item">
               <div class="order-item order-item--result">
                 <img
