:sparkles: 총금액 표시 기능 추가

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -165,20 +165,12 @@
         </div>
         <div class="order-result">
           <h3 class="order-result__tit">획득한 음료</h3>
-          <ul id="resultList" class="order-list order-list--result">
-            <li class="order-list__item">
-              <div class="order-item order-item--result">
-                <img
-                  src="./resource/img/Original_Cola.png"
-                  alt=""
-                  class="order-item__img"
-                />
-                <span class="order-item__tit">Original Cola</span>
-              </div>
-              <strong class="order-item__number">1</strong>
-            </li>
-          </ul>
-          <p class="order-result__sum" id="totalAmount">총금액 : 9,000 원</p>
+          <ul id="resultList" class="order-list order-list--result"></ul>
+          <footer>
+            <p id="resultStr" class="order-result__sum">
+              총금액 : &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp원
+            </p>
+          </footer>
         </div>
       </section>
     </div>
