:lipstick: 입금 안내 문구 수정

--- a/vending-machine/index.html
+++ b/vending-machine/index.html
@@ -145,7 +145,7 @@
         <div class="check">
           <input
             type="text"
-            placeholder="입금액 입력"
+            placeholder="금액을 입력하세요 : )"
             class="check__money check__money--input"
             id="inpDeposit"
           />
